# libgen3d

./: Makefile.am
doc/: Doxyfile  stl.h
include/libgen3d/: Makefile.am  Matrix.h  util.h
libgen3d/: bootstrap  configure.ac  libgen3d-uninstalled.pc.in  libgen3d.DevPackage.in  libgen3d.pc.in
libgen3d/config/: extra_dist.m4
libgen3d/include/: Makefile.am
libgen3d/src/: Euler.cpp  Face.cpp  Makefile.am  MathUtil.cpp  Matrix.cpp  Vertex.cpp  util.cpp
src/: Color.cpp  Makefile.am  Quaternion.cpp
