## Process this file with automake to produce Makefile.in
## Created by Anjuta - will *NOT* be overwritten

INCLUDES =

AM_CXXFLAGS = \
	 -Wall

lib_LTLIBRARIES = libgen3d.la

libgen3d_la_SOURCES = \
	Vertex.cpp\
	Face.cpp\
	Color.cpp\
	Euler.cpp\
	MathUtil.cpp\
	Matrix.cpp\
	Quaternion.cpp
    
libgen3d_la_LDFLAGS = 

libgen3d_la_LIBADD = 
